# templates

./: cookiecutter.json
fastapi-project/: cookiecutter.json
fastapi-project/withDB/: cookiecutter.json
fastapi-project/withDB/mongodb/: cookiecutter.json
fastapi-project/withDB/mongodb/{{cookiecutter.project_slug}}/: .env  pyproject.toml
fastapi-project/withDB/mongodb/{{cookiecutter.project_slug}}/app/: config.py  main.py
fastapi-project/withDB/supabase/: cookiecutter.json
fastapi-project/withDB/supabase/hooks/: post_gen_project.py
fastapi-project/withDB/supabase/{{cookiecutter.project_slug}}/: .env  pyproject.toml
fastapi-project/withDB/supabase/{{cookiecutter.project_slug}}/app/: config.py  main.py
fastapi-project/withDB/supabase/{{cookiecutter.project_slug}}/app/database/: db.py
fastapi-project/withDB/supabase/{{cookiecutter.project_slug}}/app/database/providers/: supabase.py
fastapi-project/withDB/supabase/{{cookiecutter.project_slug}}/app/utilities/: logger.py
fastapi-project/withoutDB/: cookiecutter.json
fastapi-project/withoutDB/hooks/: post_gen_project.py  pre_gen_project.py
fastapi-project/withoutDB/{{cookiecutter.project_slug}}/: .env  pyproject.toml
fastapi-project/withoutDB/{{cookiecutter.project_slug}}/app/: config.py  main.py
fastapi-project/withoutDB/{{cookiecutter.project_slug}}/app/utilities/: logger.py
nextjs-project/: cookiecutter.json
nextjs-project/agencyProject/: cookiecutter.json
nextjs-project/agencyProject/hooks/: post_gen_project.py  pre_gen_project.py  pre_prompt.py
nextjs-project/agencyProject/{{cookiecutter.project_slug}}/: .gitignore  contentlayer.config.js  env.mjs
nextjs-project/agencyProject/{{cookiecutter.project_slug}}/app/: layout.tsx  opengraph-image.tsx  robots.ts  sitemap.ts
nextjs-project/agencyProject/{{cookiecutter.project_slug}}/app/(entreprise)/: layout.tsx
nextjs-project/agencyProject/{{cookiecutter.project_slug}}/legals/: conditions-generales-de-ventes.mdx  politique-en-matiere-de-cookies.mdx
nextjs-project/hooks/: post_gen_project.py  pre_gen_project.py
nextjs-project/saasProject/: cookiecutter.json
nextjs-project/saasProject/hooks/: post_gen_project.py  pre_gen_project.py
nextjs-project/saasProject/{{cookiecutter.project_slug}}/: next.config.js  package.json
nextjs-project/saasProject/{{cookiecutter.project_slug}}/app/: manisfest.ts  page.tsx
nextjs-project/saasProject/{{cookiecutter.project_slug}}/components/: Mdx.tsx  icons.tsx  opengraph-image.tsx
nextjs-project/saasProject/{{cookiecutter.project_slug}}/config/: site.ts
nextjs-project/saasProject/{{cookiecutter.project_slug}}/emails/: contact-form-email.tsx
nextjs-project/saasProject/{{cookiecutter.project_slug}}/lib/: schema.ts  utils.tsx
nextjs-project/simpleProject/{{cookiecutter.project_slug}}/: components.json  tsconfig.json
nextjs-project/simpleProject/{{cookiecutter.project_slug}}/app/: opengraph-image.tsx  robots.ts
nextjs-project/simpleProject/{{cookiecutter.project_slug}}/components/: theme-toggle.tsx
nextjs-project/simpleProject/{{cookiecutter.project_slug}}/config/: site.ts
nextjs-project/simpleProject/{{cookiecutter.project_slug}}/legals/: conditions-generales-d-utilisation.mdx  legal-notices.mdx  politique-en-matiere-de-cookies.mdx
nextjs-project/{{cookiecutter.project_slug}}/: next.config.js  package.json  tailwind.config.ts
nextjs-project/{{cookiecutter.project_slug}}/app/: layout.tsx  page.tsx
nextjs-project/{{cookiecutter.project_slug}}/app/home/faq/: home-faq.tsx
nextjs-project/{{cookiecutter.project_slug}}/components/share/: footer.tsx  navbar.tsx
simple-python-project/: cookiecutter.json
simple-python-project/{{cookiecutter.project_slug}}/: pyproject.toml
(+54 files in other folders)
