[tool.poetry]
name = "{{ cookiecutter.project_name }}"
version = "{{ cookiecutter.version }}"
description = "{{ cookiecutter.short_description }}"
authors = ["{{ cookiecutter.full_name }} <{{ cookiecutter.email }}>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^{{ cookiecutter.python_version}}"

{% if cookiecutter.ruff or  cookiecutter.mypy or  cookiecutter.black  %}
[tool.poetry.group.dev.dependencies]
{% endif %}
{% if cookiecutter.mypy %}
mypy = "^1.7.0"
{% endif %}
{% if cookiecutter.ruff %}
ruff = "^0.1.6"
{% endif %}
{% if cookiecutter.black %}
black = "^23.11.0"
{% endif %}

{% if cookiecutter.black %}
[tool.black]
line-length = 88
{% endif %}

{% if cookiecutter.ruff %}
[tool.ruff]
select = ["E", "F", "I"]
fixable = ["ALL"]
exclude = [".git", ".mypy_cache", ".ruff_cache"]
line-length = 88
{% endif %}

{% if cookiecutter.mypy %}
[tool.mypy]
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
strict_equality = true
disallow_untyped_decorators = false
ignore_missing_imports = true
implicit_reexport = true
plugins = "pydantic.mypy"

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true
{% endif %}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"